feat(profile): add route
